--- a/src/ui/Table/TablePagination/TablePagination.module.scss
+++ b/src/ui/Table/TablePagination/TablePagination.module.scss
@@ -1,7 +1,7 @@
-@use '../../styles/mixins.scss';
-
 .pagination {
-  @include mixins.flex(row, center, center);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   gap: 6px;
   padding: 12px 0 16px;
 
