--- a/src/components/DropdownSearch/DropdownSearch.module.scss
+++ b/src/components/DropdownSearch/DropdownSearch.module.scss
@@ -1,5 +1,3 @@
-@use '../../styles/mixins.scss';
-
 .dropdownSearch {
   position: sticky;
   top: 0;
@@ -19,5 +17,7 @@
   width: 40px;
   height: 40px;
   stroke: var(--gray-500);
-  @include mixins.flex(row, center, center);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
