--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -1,8 +1,7 @@
-@use '../../styles/mixins.scss';
-
 .backdrop {
-  @include mixins.flex(row, center, center);
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: absolute;
   top: 0;
   left: 0;
@@ -41,6 +40,8 @@
   background: var(--gray-100);
   stroke: var(--gray-400);
   border-radius: 6px;
-  @include mixins.flex(row, center, center);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
 }
