--- a/src/components/SvgIcon/SvgIcon.module.scss
+++ b/src/components/SvgIcon/SvgIcon.module.scss
@@ -1,7 +1,7 @@
-@use '../../styles/mixins.scss';
-
 .svgIcon {
-  @include mixins.flex(row, center, center);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   flex-shrink: 0;
   stroke: inherit;
 
