--- a/src/components/TabBar/TabBar.module.scss
+++ b/src/components/TabBar/TabBar.module.scss
@@ -1,7 +1,7 @@
-@use '../../styles/mixins.scss';
-
 .tabBar {
-  @include mixins.flex(row, flex-start, flex-end);
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
 
   width: 100%;
   height: 40px;
@@ -11,8 +11,8 @@
 }
 
 .tab {
-  @include mixins.flex(row, unset, center);
-
+  display: flex;
+  align-items: center;
   height: 40px;
   position: relative;
   cursor: pointer;
