--- a/src/ui/Dropdown/Dropdown.module.scss
+++ b/src/ui/Dropdown/Dropdown.module.scss
@@ -1,7 +1,7 @@
-@use '../../styles/mixins';
-
 .emptyState {
-  @include mixins.flex(row, center, center);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   stroke: var(--gray-900);
   color: var(--gray-700);
   padding: 0 16px;
