--- a/src/ui/Table/Table.module.scss
+++ b/src/ui/Table/Table.module.scss
@@ -1,5 +1,3 @@
-@use '../../styles/mixins.scss';
-
 .table {
   width: 100%;
   border: 1px solid var(--gray-200);
@@ -39,7 +37,9 @@
     height: 100%;
     padding: 0px 14px;
     border-bottom: 1px solid var(--gray-200);
-    @include mixins.flex(row, flex-start, center);
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
     gap: 4px;
   }
 
