--- a/src/components/TabBar/TabBar.module.scss
+++ b/src/components/TabBar/TabBar.module.scss
@@ -5,7 +5,7 @@
 
   width: 100%;
   height: 40px;
-  border-bottom: 1px solid var(--gray-200);
+  border-bottom: 1px solid var(--primary-200);
   gap: 16px;
   padding: 0 16px;
 }
@@ -16,7 +16,6 @@
   height: 40px;
   position: relative;
   cursor: pointer;
-  color: var(--gray-500);
 
   .underline {
     display: block;
@@ -26,12 +25,12 @@
     position: absolute;
     bottom: 0;
     border-radius: 2px 2px 0 0;
-    background: var(--primary-700);
+    background: var(--primary-400);
     opacity: 0;
   }
 
   &_active {
-    color: var(--primary-700);
+    color: var(--primary-400);
 
     .underline {
       opacity: 1;
