--- a/src/components/Text/Text.module.scss
+++ b/src/components/Text/Text.module.scss
@@ -104,17 +104,14 @@
     bottom: -2px;
     position: absolute;
     left: 0;
-    width: 0;
+    width: 100%;
     height: 2px;
     background: var(--primary-500);
-    transition: width 0.3s ease;
+    opacity: 0;
+    transition: opacity 0.3s ease;
   }
 
   &:hover::after {
-    width: 100%;
+    opacity: 1;
   }
-}
-
-.disabledLink {
-  cursor: not-allowed;
 }
