--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -37,7 +37,12 @@
   --primary-dark-800: #061d41;
   --primary-dark-900: #030f21;
 
-  --sidebar-bg: rgba(3, 15, 33, 0.3); // should be same sa primary-dark-900
+  --primary-dark-900-transparent: rgba(
+    3,
+    15,
+    33,
+    0.3
+  ); // should be same sa primary-dark-900
 
   --error-25: #fffbfa;
   --error-50: #fef3f2;
