--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,12 +3,7 @@ html {
   color: var(--gray-50);
   stroke: var(--gray-50);
   overflow: hidden;
-  background: var(--primary-dark-700);
-  background: linear-gradient(
-    135deg,
-    var(--primary-dark-700) 0%,
-    var(--primary-dark-900) 100%
-  );
+  background: var(--primary-dark-900);
 }
 
 :root {
@@ -25,6 +20,7 @@ html {
 
 a {
   text-decoration: none;
+  color: inherit;
 }
 
 div {
