--- a/src/styles/shadows.scss
+++ b/src/styles/shadows.scss
@@ -1,17 +1,13 @@
 // https://www.figma.com/file/MsZNKKP0ymD9SsHUVJaz60/Lifesight-DS?node-id=1532%3A352912
 
 :root {
-  --shadow-xs: 0px 1px 2px rgba(16, 24, 40, 0.5);
-  --shadow-sm: 0px 1px 3px rgba(16, 24, 40, 1),
-    0px 1px 2px rgba(16, 24, 40, 0.6);
-  --shadow-md: 0px 4px 8px -2px rgba(16, 24, 40, 1),
-    0px 2px 4px -2px rgba(16, 24, 40, 0.6);
-  --shadow-lg: 0px 12px 16px -4px rgba(16, 24, 40, 1),
-    0px 4px 6px -2px rgba(16, 24, 40, 0.5);
-  --shadow-xl: 0px 20px 24px -4px rgba(16, 24, 40, 1),
-    0px 8px 8px -4px rgba(16, 24, 40, 0.4);
-  --shadow-2xl: 0px 24px 48px -12px rgba(16, 24, 40, 1);
-  --shadow-3xl: 0px 32px 64px -12px rgba(16, 24, 40, 1);
+  --shadow-xs: 0px 1px 2px black;
+  --shadow-sm: 0px 1px 3px black, 0px 1px 2px black;
+  --shadow-md: 0px 4px 8px -2px black, 0px 2px 4px -2px black;
+  --shadow-lg: 0px 12px 16px -4px black, 0px 4px 6px -2px black;
+  --shadow-xl: 0px 20px 24px -4px black, 0px 8px 8px -4px black;
+  --shadow-2xl: 0px 24px 48px -12px black;
+  --shadow-3xl: 0px 32px 64px -12px black;
 
   --shadow-focus: 0px 1px 2px rgba(16, 24, 40, 0.5),
     0px 0px 0px 4px var(--primary-100);
