--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -27,22 +27,16 @@
   --primary-200: #c1d6f5;
   --primary-300: #98bdf4;
   --primary-400: #5c98f1;
+  --primary-400-02: #5c98f114;
   --primary-500: #2969cb;
   --primary-600: #1050b1;
   --primary-700: #0e469a;
   --primary-800: #0e3c80;
   --primary-900: #0e3269;
 
-  --primary-dark-700: #082c62;
-  --primary-dark-800: #061d41;
+  --primary-dark-700: #061b3e;
+  --primary-dark-800: #051633;
   --primary-dark-900: #030f21;
-
-  --primary-dark-900-transparent: rgba(
-    3,
-    15,
-    33,
-    0.3
-  ); // should be same sa primary-dark-900
 
   --error-25: #fffbfa;
   --error-50: #fef3f2;
