--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,3 +4,5 @@
 @import './global.scss';
 @import './pageTransition.scss';
 @import './shadows.scss';
+
+@import 'react-tooltip/dist/react-tooltip.css';
