--- a/src/components/TabBar/TabBar.module.scss
+++ b/src/components/TabBar/TabBar.module.scss
@@ -6,7 +6,7 @@
   width: 100%;
   height: 40px;
   border-bottom: 1px solid var(--primary-200);
-  gap: 16px;
+  gap: 24px;
   padding: 0 16px;
 }
 
@@ -20,17 +20,26 @@
   .underline {
     display: block;
     content: '';
-    width: 100%;
+    width: calc(100% + 16px);
     height: 2px;
     position: absolute;
+    left: -8px;
     bottom: 0;
     border-radius: 2px 2px 0 0;
     background: var(--primary-400);
     opacity: 0;
   }
 
+  &:hover {
+    color: var(--primary-200);
+  }
+
   &_active {
     color: var(--primary-400);
+
+    &:hover {
+      color: var(--primary-400);
+    }
 
     .underline {
       opacity: 1;
