--- a/src/ui/Table/Table.module.scss
+++ b/src/ui/Table/Table.module.scss
@@ -1,5 +1,3 @@
-@use 'sass:color';
-
 .table {
   width: 100%;
   border-radius: 3px;
@@ -25,10 +23,12 @@
 
     svg {
       opacity: 0;
-      stroke: var(--gray-500);
+      stroke: var(--gray-300);
+      cursor: pointer;
     }
 
     &.sortedColumn svg {
+      stroke: var(--primary-400);
       opacity: 1 !important;
     }
   }
@@ -53,13 +53,7 @@
   }
 
   tr {
-    // background-color: var(--white);
-
     &:hover {
-      td {
-        // background-color: var(--primary-50);
-      }
-
       th svg {
         opacity: 0.5;
 
