graph tab and scatter tab improvements

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -37,6 +37,7 @@
   --primary-dark-700: #061b3e;
   --primary-dark-800: #051633;
   --primary-dark-900: #030f21;
+  --primary-dark-900-02: #030f2114;
 
   --error-25: #fffbfa;
   --error-50: #fef3f2;
