--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -12,109 +12,66 @@
   cursor: pointer;
   box-shadow: var(--shadow-xs);
 
+  background: var(--button-bg-color);
+  color: var(--button-content-color);
+  stroke: var(--button-content-color);
+
   &_variant {
     &_primary {
-      background: var(--primary-600);
-      color: white;
-      stroke: white;
+      --button-bg-color: var(--primary-400);
+      --button-content-color: var(--primary-dark-900);
 
       &:hover {
-        background: var(--primary-700);
-      }
-
-      &.active {
-        background: var(--primary-800);
+        --button-bg-color: var(--primary-500);
       }
 
       &.disabled {
-        background-color: var(--primary-200);
-      }
-
-      &.loading {
-        .loader {
-          background-color: var(--primary-600);
-
-          > div {
-            svg {
-              stroke: var(--primary-200);
-            }
-          }
-        }
+        --button-bg-color: var(--primary-800);
       }
     }
 
     &_secondary {
-      background: var(--white);
-      border: 1px solid var(--gray-300);
-      color: var(--gray-700);
-      stroke: var(--gray-700);
+      --button-bg-color: var(--primary-dark-900);
+      --button-content-color: var(--primary-400);
+      border: 1px solid var(--button-content-color);
 
       &:hover {
-        background: var(--gray-50);
-        color: var(--gray-800);
-        stroke: var(--gray-800);
-      }
-
-      &.active {
-        background: var(--gray-200);
-        color: var(--gray-900);
-        stroke: var(--gray-900);
+        --button-bg-color: var(--primary-800);
+        --button-content-color: var(--primary-300);
       }
 
       &.disabled {
-        border-color: var(--gray-200);
-        color: var(--gray-300);
-        stroke: var(--gray-300);
-      }
+        --button-content-color: var(--gray-600);
 
-      &.loading {
-        .loader {
-          background-color: white;
-
-          > div {
-            svg {
-              stroke: var(--gray-200);
-            }
-          }
+        &:hover {
+          --button-bg-color: var(--primary-dark-900);
         }
       }
     }
 
     &_red {
-      background: white;
-      color: var(--error-700);
-      stroke: var(--error-700);
-      border: 1px solid var(--error-300);
+      --button-bg-color: var(--primary-dark-900);
+      --button-content-color: var(--error-400);
+      border: 1px solid var(--button-content-color);
 
       &:hover {
-        background: var(--error-50);
-      }
-
-      &:active {
-        background: var(--error-200);
+        --button-bg-color: var(--error-900);
       }
 
       &.disabled {
-        color: var(--error-300);
-        stroke: var(--error-300);
-        border-color: var(--error-200);
-      }
+        --button-content-color: var(--error-900);
 
-      &.loading {
-        .loader {
-          background-color: white;
-
-          > div {
-            svg {
-              stroke: var(--error-200);
-            }
-          }
+        &:hover {
+          --button-bg-color: var(--primary-dark-900);
         }
       }
     }
   }
 
   &_width {
+    &_content {
+      width: unset;
+    }
     &_full {
       width: 100%;
     }
@@ -153,8 +110,8 @@
 }
 
 .disabled {
-  pointer-events: none;
   cursor: not-allowed;
+  opacity: 0.7;
 }
 
 .loader {
@@ -168,6 +125,7 @@
   bottom: 0;
   opacity: 0;
   --transition-time: 0s;
+  background: var(--button-bg-color);
 }
 
 .loading {
