--- a/src/components/ScorePie/ScorePie.module.scss
+++ b/src/components/ScorePie/ScorePie.module.scss
@@ -12,46 +12,85 @@
   justify-content: center;
   background: var(--primary-dark-800);
   border-radius: 50%;
+
+  &:before,
+  &:after {
+    content: '';
+    position: absolute;
+    border-radius: 50%;
+  }
+
+  &:before {
+    inset: 0;
+    background: radial-gradient(farthest-side, var(--c) 98%, #0000) top/var(--b)
+        var(--b) no-repeat,
+      conic-gradient(var(--c) calc(var(--p) * 1%), #0000 0);
+    -webkit-mask: radial-gradient(
+      farthest-side,
+      #0000 calc(99% - var(--b)),
+      #000 calc(100% - var(--b))
+    );
+    mask: radial-gradient(
+      farthest-side,
+      #0000 calc(99% - var(--b)),
+      #000 calc(100% - var(--b))
+    );
+  }
+  &:after {
+    inset: calc(50% - var(--b) / 2);
+    background: var(--c);
+    transform: rotate(calc(var(--p) * 3.6deg))
+      translateY(calc(50% - var(--w) / 2));
+  }
+
+  &:hover .tooltip {
+    opacity: 1;
+  }
 }
-.pie:before,
-.pie:after {
-  content: '';
-  position: absolute;
-  border-radius: 50%;
-}
-.pie:before {
-  inset: 0;
-  background: radial-gradient(farthest-side, var(--c) 98%, #0000) top/var(--b)
-      var(--b) no-repeat,
-    conic-gradient(var(--c) calc(var(--p) * 1%), #0000 0);
-  -webkit-mask: radial-gradient(
-    farthest-side,
-    #0000 calc(99% - var(--b)),
-    #000 calc(100% - var(--b))
-  );
-  mask: radial-gradient(
-    farthest-side,
-    #0000 calc(99% - var(--b)),
-    #000 calc(100% - var(--b))
-  );
-}
-.pie:after {
-  inset: calc(50% - var(--b) / 2);
-  background: var(--c);
-  transform: rotate(calc(var(--p) * 3.6deg))
-    translateY(calc(50% - var(--w) / 2));
-}
+
 .animate {
   animation: p 1s 0.5s both;
 }
+
 .no-round:before {
   background-size: 0 0, auto;
 }
+
 .no-round:after {
   content: none;
 }
+
 @keyframes p {
   from {
     --p: 0;
+  }
+}
+
+.tooltip {
+  position: absolute;
+  bottom: 100%;
+  background: var(--primary-dark-900);
+  border: 1px solid var(--primary-200);
+  box-shadow: var(--shadow-md);
+  z-index: 10;
+  padding: 8px;
+  font-weight: 400;
+  text-align: start;
+  opacity: 0;
+  transition-property: opacity;
+
+  &::after {
+    content: '';
+    position: absolute;
+    width: 5px;
+    height: 5px;
+    top: 100%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(45deg);
+    background: var(--primary-dark-900);
+    border-top: 1px solid transparent;
+    border-left: 1px solid transparent;
+    border-bottom: 1px solid var(--primary-200);
+    border-right: 1px solid var(--primary-200);
   }
 }
