token page first section

--- a/src/components/ScorePie/ScorePie.module.scss
+++ b/src/components/ScorePie/ScorePie.module.scss
@@ -1,8 +1,8 @@
 .pie {
-  --p: 20;
-  --b: 5px;
-  --c: darkred;
-  --w: 40px;
+  // --p: 20;
+  // --b: 5px;
+  // --c: darkred;
+  // --w: 40px;
 
   width: var(--w);
   aspect-ratio: 1;
