interpolate mentions on chart

--- a/src/ui/Layout/Header/Header.module.scss
+++ b/src/ui/Layout/Header/Header.module.scss
@@ -7,6 +7,8 @@
   padding: 0 24px;
   background-color: var(--primary-dark-900);
   border-bottom: 1px solid var(--primary-200);
+  box-shadow: var(--shadow-lg);
+  position: relative;
 }
 
 .logo {
