--- a/src/components/CustomTooltip/CustomTooltip.module.scss
+++ b/src/components/CustomTooltip/CustomTooltip.module.scss
@@ -18,4 +18,11 @@
     border-bottom: 1px solid var(--primary-200);
     border-right: 1px solid var(--primary-200);
   }
+
+  &[class*='react-tooltip__place-bottom'] [class*='react-tooltip-arrow'] {
+    border-top: 1px solid var(--primary-200);
+    border-left: 1px solid var(--primary-200);
+    border-bottom: 1px solid transparent;
+    border-right: 1px solid transparent;
+  }
 }
