--- a/src/ui/Layout/SideMenu/SideMenu.module.scss
+++ b/src/ui/Layout/SideMenu/SideMenu.module.scss
@@ -77,6 +77,7 @@
 
 .groupHeading {
   margin-bottom: 12px;
+  padding-right: 8px;
   color: var(--primary-100);
   display: flex;
   justify-content: space-between;
