--- a/src/views/TokensListPage/VisualizationsTab/VisualizationsTab.module.scss
+++ b/src/views/TokensListPage/VisualizationsTab/VisualizationsTab.module.scss
@@ -3,22 +3,17 @@
   --transition-property: none;
 }
 
+.heading {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-top: 24px;
+  margin-bottom: 16px;
+  margin-right: 24px;
+}
+
 .resetButton {
   position: absolute;
   top: 10px;
   left: 10px;
-}
-
-.controls {
-  display: flex;
-  align-items: flex-start;
-
-  .info {
-    margin-left: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    gap: 4px;
-    color: var(--gray-500);
-  }
 }
