--- a/src/components/Skeleton/Skeleton.module.scss
+++ b/src/components/Skeleton/Skeleton.module.scss
@@ -5,21 +5,20 @@
   border-radius: 6px;
   background-image: linear-gradient(
     90deg,
-    var(--gray-100) 0px,
+    var(--primary-900) 0px,
     transparent 40px,
-    var(--gray-100) 80px,
-    var(--gray-100) 1400px
+    var(--primary-900) 80px
   );
-  animation: shine-lines 5s infinite linear;
+  background-size: 200%;
+  animation: shine-lines 4s infinite linear;
 }
 
 @keyframes shine-lines {
   0% {
-    background-position: -80px;
+    background-position-x: 100%;
   }
 
-  50%,
   100% {
-    background-position: calc(100% + 80px);
+    background-position-x: -100%;
   }
 }
