degen page and related stuff

--- a/src/ui/Dropdown/Dropdown.module.scss
+++ b/src/ui/Dropdown/Dropdown.module.scss
@@ -2,8 +2,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  stroke: var(--gray-900);
-  color: var(--gray-700);
+  stroke: var(--primary-400);
+  color: var(--primary-400);
   padding: 0 16px;
   height: 40px;
 }
