--- a/src/ui/Dropdown/DropdownItem/DropdownItem.module.scss
+++ b/src/ui/Dropdown/DropdownItem/DropdownItem.module.scss
@@ -6,8 +6,6 @@
   width: 100%;
   max-width: 100%;
   padding: 0 16px;
-  color: var(--gray-700);
-  stroke: var(--gray-700);
   gap: 12px;
   cursor: pointer;
 
@@ -17,8 +15,8 @@
   }
 
   &:hover {
-    background: var(--primary-50);
-    color: var(--primary-700);
+    background: var(--primary-dark-800);
+    color: var(--primary-400);
 
     svg {
       stroke: var(--primary-700);
