--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -5,7 +5,6 @@
   .inputLabel {
     margin-top: 0;
     margin-bottom: 12px;
-    color: var(--gray-700);
   }
 
   .inner {
@@ -14,8 +13,8 @@
     width: 100%;
     height: 40px;
     border-radius: 8px;
-    background: var(--white);
-    border: 1px solid var(--gray-300);
+    background: var(--primary-dark-900);
+    border: 1px solid var(--gray-500);
     box-shadow: var(--shadow-xs);
   }
 
@@ -23,7 +22,7 @@
     flex: 1;
     height: 40px;
     padding: 0 16px;
-    color: var(--gray-900);
+    color: var(--gray-200);
     font-size: 14px;
     line-height: 20px;
     background: none;
@@ -33,7 +32,7 @@
     width: 100%;
 
     &::placeholder {
-      color: var(--gray-400);
+      color: var(--gray-500);
       opacity: 1;
       font-size: 14px;
       line-height: 20px;
@@ -42,7 +41,7 @@
 
   &_focused {
     .inner {
-      border-color: var(--primary-300);
+      border-color: var(--primary-400);
       box-shadow: var(--shadow-focus);
     }
 
@@ -53,7 +52,7 @@
 
   &_error {
     .inner {
-      border-color: var(--error-300);
+      border-color: var(--error-400);
     }
 
     &.input_focused .inner {
@@ -62,14 +61,14 @@
   }
 
   &_disabled .inner {
-    background: var(--gray-100);
+    background: var(--gray-700);
   }
 }
 
 .errorMessage {
   position: absolute;
   margin-top: 0px;
-  color: var(--error-500);
+  color: var(--error-400);
 }
 
 .leftBlock,
