--- a/src/ui/Dropdown/DropdownSearch/DropdownSearch.module.scss
+++ b/src/ui/Dropdown/DropdownSearch/DropdownSearch.module.scss
@@ -3,11 +3,10 @@
   top: 0;
   width: 100%;
   z-index: 2;
-  background-color: var(--white);
 
   div[class*='inner'] {
     border: none;
-    border-bottom: 1px solid var(--gray-100);
+    border-bottom: 1px solid var(--primary-dark-800);
     border-radius: 0;
     box-shadow: none !important;
   }
