--- a/src/ui/TokenPriceChart/TokenPriceChart.module.scss
+++ b/src/ui/TokenPriceChart/TokenPriceChart.module.scss
@@ -15,3 +15,23 @@
   align-items: center;
   padding-bottom: 100px;
 }
+
+.tooltipContainer {
+  background: var(--primary-dark-900);
+  border: 1px solid var(--primary-200);
+  border-radius: 6px;
+  box-shadow: var(--shadow-md);
+  transition: none !important;
+  z-index: 10;
+  padding: 8px !important;
+  max-width: 300px;
+  font-weight: 400;
+  text-align: start;
+  word-wrap: break-word;
+  white-space: break-spaces;
+  word-break: break-word;
+}
+
+.tooltipHeading {
+  margin-bottom: 8px;
+}
