--- a/src/components/Avatar/Avatar.module.scss
+++ b/src/components/Avatar/Avatar.module.scss
@@ -7,6 +7,7 @@
   height: 40px;
   min-height: 40px;
   border-radius: 50px;
+  border: 2px solid var(--primary-400);
   overflow: hidden;
   background: var(--primary-50);
 
