--- a/src/views/TokensListPage/ConnectionsTab/ConnectionsTab.module.scss
+++ b/src/views/TokensListPage/ConnectionsTab/ConnectionsTab.module.scss
@@ -9,25 +9,26 @@
 }
 
 .graphContainer {
-  width: 100%;
-  height: 600px;
+  width: calc(100% + 64px);
+  height: calc(100vh - 285px);
   display: flex;
   align-items: center;
   justify-content: center;
   overflow: hidden;
-  border: 1px solid var(--primary-200);
   margin-top: 24px;
+  margin-left: -32px;
+  margin-right: -32px;
   --transition-property: none;
 }
 
 .nodeLabel {
   color: white;
   z-index: 0;
-  -webkit-text-fill-color: white;
-  -webkit-text-stroke-width: 1px;
-  text-shadow: -1px -1px 2px var(--node-stroke-color),
-    1px -1px 2px var(--node-stroke-color), -1px 1px 2px var(--node-stroke-color),
-    1px 1px 2px var(--node-stroke-color);
+  // -webkit-text-fill-color: white;
+  // -webkit-text-stroke-width: 1px;
+  // text-shadow: -1px -1px 2px var(--node-stroke-color),
+  //   1px -1px 2px var(--node-stroke-color), -1px 1px 2px var(--node-stroke-color),
+  //   1px 1px 2px var(--node-stroke-color);
 
   &.tokens {
     --node-stroke-color: var(--primary-400);
